# uprs

./: .travis.yml  Cargo.toml  README.md
config/: notifications.toml  options.toml  sites.toml
migrations/2019-07-21-162342_create_requests/: up.sql
src/: https_client.rs  main.rs  models.rs  schema.rs  settings.rs
tests/config/: notifications.toml  sites.toml
