[package]
name = "uprs"
version = "0.1.0"
authors = ["Ethan Knowlton <eknowlton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
