[package]
name = "uprs"
version = "0.1.0"
authors = ["Ethan Knowlton <eknowlton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
diesel = { version = "1.0.0", features = ["postgres"] }
tokio = "0.1"
futures = "0.1"
hyper = "0.12"
native-tls = "0.2"
tokio-tls = "0.2"
